# Atletico_de_Parla

./: .gitignore  README.md
ApiRick/: .gitignore  main.cpp
Entrega 1 (21-11-2025) - API_Rick_&_Morty/api_rick_morty/: main.cpp
Entrega1/ApiRick/: CMakeLists.txt  main.cpp
Entrega1Robocup/Player/: CMakeLists.txt  main.cpp
Entrega2Robocup/player/: CMakeLists.txt  main.cpp
Entrega3Robocup/Player/: CMakeLists.txt  funcionesaux.cpp  funcionesaux.h  main.cpp  players.sh
RobocupEntrega1/player_robocup/: CMakeLists.txt  launchPlayers.sh  main.cpp
